--- a/LLProject/LLProject/LLProject.csproj
+++ b/LLProject/LLProject/LLProject.csproj
@@ -90,34 +90,34 @@
       <DependentUpon>frmstockinfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Customer.cs">
-      <DependentUpon>Model.tt</DependentUpon>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\ItemInfo.cs">
-      <DependentUpon>Model.tt</DependentUpon>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\jnLLPModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jnLLPModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\jnLLPModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\jnLLPModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jnLLPModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Model\Login.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Model.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Model.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Model.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.edmx</DependentUpon>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\Sale.cs">
-      <DependentUpon>Model.tt</DependentUpon>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\StockIN.cs">
-      <DependentUpon>Model.tt</DependentUpon>
+      <DependentUpon>jnLLPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -145,12 +145,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="Model\Model.edmx">
+    <EntityDeploy Include="Model\jnLLPModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model.Designer.cs</LastGenOutput>
+      <LastGenOutput>jnLLPModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Model\Model.edmx.diagram">
-      <DependentUpon>Model.edmx</DependentUpon>
+    <None Include="Model\jnLLPModel.edmx.diagram">
+      <DependentUpon>jnLLPModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -167,19 +167,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model\Model.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model.Context.cs</LastGenOutput>
-      <DependentUpon>Model.edmx</DependentUpon>
-    </Content>
-    <Content Include="Model\Model.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model.edmx</DependentUpon>
-      <LastGenOutput>Model.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="Model\jnLLPModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>jnLLPModel.edmx</DependentUpon>
+      <LastGenOutput>jnLLPModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\jnLLPModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>jnLLPModel.edmx</DependentUpon>
+      <LastGenOutput>jnLLPModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
